spacing fixed

--- a/front-end/src/css/menus.css
+++ b/front-end/src/css/menus.css
@@ -42,7 +42,7 @@ hr.style-two {
 
 .menu-font {
   font-size: 90px;
-  letter-spacing: 0.5px;
+  letter-spacing: -2px;
 }
 
 h1,
